# Valravn

./: CMakeLists.txt  Dockerfile  README.md  Remarques  Tasks  install_dependencies  main.cpp
cmake/: FindLIBVLC.cmake  FindSQLite3.cmake
headers/audio/: Audio.h
headers/core/: DependencyInjector.h  Error.h  IObeserver.h  StorageManager.h  StringCheckers.h  StringTools.h  Timer.h  Tools.h
headers/database/: DataBase.h  Error.h  IRepository.h  PersistentEntity.h  SQLHelpers.h  SQLiteWrapper.h
headers/image/: Image.h  ImageRepo.h
headers/media_player/: IPlayable.h  MediaDisplay.h  Multimedia.h  MultimediaRepo.h  Parameter.h  VLC_Wrapper.h
headers/playlist/: Playlist.h  PlaylistRepo.h  Schedule.h  ScheduleRepo.h
headers/rest_api/: AppComponent.h  ErrorHandler.h  ImageController.h  MediaController.h  MediaServices.h  PlaylistController.h  SwaggerComponent.h  VideoController.h
headers/rest_api/dto/: StatusDto.h
headers/rest_api/dto/input/: AddToPlaylist.h  MediaUploadDto.h  MultimediaInputDto.h
headers/rest_api/dto/output/: ImageDTO.h  MultimediaDto.h  VideoDTO.h
headers/rest_api/helpers/: ErrorHandler.h  FileUploadHandler.h  MediaServices.h
headers/video/: Video.h  VideoRepo.h
headers/video/playing_state/: VideoPausedState.h  VideoPlayingState.h  VideoStateHandler.h  VideoStoppedState.h  VideoTerminatedState.h
src/: CMakeLists.txt
src/DataBase/Contracts/: DataBase.h  IRepository.h  Savable.h
src/DataBase/Contracts/Repos/: ImageRepo.h  MultimediaRepo.h  PlaylistRepo.h  ScheduleRepo.h  Tools.h  VideoRepo.h
src/DataBase/Imp/: DataBase.cpp
src/DataBase/Imp/Repos/: ImageRepo.cpp  MultimediaRepo.cpp  PlaylistRepo.cpp  ScheduleRepo.cpp  VideoRepo.cpp
src/Entity/: Audio.cpp  Audio.h  DependencyInjector.h  IPlayable.h  Image.cpp  Image.h  MediaDisplay.cpp  MediaDisplay.h  Multimedia.cpp  Multimedia.h  Parameter.cpp  Parameter.h  Playabale.h  Playlist.cpp  Playlist.h  Schedule.cpp  Schedule.h  Tools.h  Video.cpp  Video.h
src/Entity/Contract/: DependencyInjector.h  IPlayable.h  Image.h  MediaDisplay.h  Multimedia.h  Playlist.h  Schedule.h  Video.h
src/Entity/Contract/VideoState/: VideoPausedState.h  VideoPlayingState.h  VideoStateHandler.h  VideoStoppedState.h  VideoTerminatedState.h
src/Entity/Impl/: Audio.cpp  Image.cpp  MediaDisplay.cpp  Multimedia.cpp  Parameter.cpp  Playlist.cpp  Schedule.cpp  Video.cpp
src/Entity/Impl/MediaPlayingStates/Video/: VideoStateHandler.cpp
src/Entity/Impl/MediaPlayingStates/Video/states/: VideoPausedState.cpp  VideoPlayingState.cpp  VideoStoppedState.cpp  VideoTerminatedState.cpp
src/Entity/MediaPlayingStates/Video/: VideoPausedState.cpp  VideoPausedState.h  VideoPlayingState.cpp  VideoPlayingState.h  VideoStateHandler.cpp  VideoStateHandler.h  VideoStoppedState.cpp  VideoStoppedState.h
src/Entity/MediaPlayingStates/Video/states/: VideoPausedState.h  VideoPlayingState.h  VideoStoppedState.h  VideoTerminatedState.cpp
src/MediaPlayer/: IObeserver.h  VLC_Wrapper.cpp  VLC_Wrapper.h
src/RestServer/: AppComponent.h  ErrorHandler.h  SwaggerComponent.h
src/RestServer/Controller/: ImageController.h  MediaController.h  VideoController.h
src/RestServer/dto/: StatusDto.h
src/RestServer/dto/input/: AddToPlaylist.h  ImageCreationDto.h  ImageInputDto.h  MediaUploadDto.h  MultimediaInputDto.h
src/RestServer/dto/output/: ImageDTO.h  MultimediaDto.h  VideoDTO.h
src/RestServer/services/: MediaServices.h
src/Shared/: CustomError.h  DependencyInjector.h  StorageManager.h  Timer.h  Tools.h
src/audio/: Audio.cpp
src/database/: DataBase.cpp  SQLHelpers.cpp  SQLiteWrapper.cpp
src/image/: Image.cpp  ImageRepo.cpp
src/media_player/: MediaDisplay.cpp  Multimedia.cpp  MultimediaRepo.cpp  Parameter.cpp  VLC_Wrapper.cpp
src/playlist/: Playlist.cpp  Schedule.cpp  ScheduleRepo.cpp
src/rest_api/helpers/: FileUploadHandler.cpp
src/video/: Video.cpp  VideoRepo.cpp  VideoStateHandler.cpp
src/video/states/: VideoPausedState.cpp  VideoPlayingState.cpp  VideoStoppedState.cpp  VideoTerminatedState.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/Entity/: Audio.cpp  Image.cpp  Multimedia.cpp  Parameter.cpp  Playlist.cpp  Tools.cpp  Touls.cpp  Video.cpp
tests/unit_tests/MediaPlaying/: mediaParsing.cpp
tests/unit_tests/MediaPlaying/Video/: VideoPlaying.cpp
tests/unit_tests/Repo/: DeleteImage.cpp  SaveImage.cpp  UpdateImage.cpp  tools.cpp
tests/unit_tests/Repo/image/: DeleteImage.cpp  SaveImage.cpp  UpdateImage.cpp
tests/unit_tests/Repo/stubs/: Images.cpp  Images.h  Videos.cpp  Videos.h
tests/unit_tests/Repo/tools/: Database.cpp  Database.h
tests/unit_tests/Repo/video/: UpdateVideo.cpp
